risk mapping, needs to be corrected however

--- a/MaternalHelathNotebook.ipynb
+++ b/MaternalHelathNotebook.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4   35         120           60   6.1      98.0         76   low risk"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "max      90.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "        <Axes: title={'center': 'HeartRate'}>]], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -421,16 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x27a28a12c80>"
+       "<seaborn.axisgrid.PairGrid at 0x27a3413b2b0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "<Axes: xlabel='BodyTemp', ylabel='count'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "<Axes: xlabel='HeartRate', ylabel='count'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -630,27 +630,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
+     "evalue": "string indices must be integers",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\U360269\\Desktop\\Codes\\Maternal-Health\\MaternalHelathNotebook.ipynb Cell 20\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/U360269/Desktop/Codes/Maternal-Health/MaternalHelathNotebook.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m risk_mapping \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mhigh risk\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m1\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmid risk\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m2\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mlow risk\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m3\u001b[39m}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/U360269/Desktop/Codes/Maternal-Health/MaternalHelathNotebook.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m ds \u001b[39min\u001b[39;00m dataset:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/U360269/Desktop/Codes/Maternal-Health/MaternalHelathNotebook.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     ds[\u001b[39m'\u001b[39m\u001b[39mRiskLevel\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m dataset[\u001b[39m'\u001b[39m\u001b[39mRiskLevel\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39mhigh risk\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m1\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "\u001b[1;32mc:\\Users\\U360269\\Desktop\\Codes\\Maternal-Health\\MaternalHelathNotebook.ipynb Cell 20\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/U360269/Desktop/Codes/Maternal-Health/MaternalHelathNotebook.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m risk_mapping \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mhigh risk\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m0\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mmid risk\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlow risk\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m2\u001b[39m}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/U360269/Desktop/Codes/Maternal-Health/MaternalHelathNotebook.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m data \u001b[39min\u001b[39;00m dataset:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/U360269/Desktop/Codes/Maternal-Health/MaternalHelathNotebook.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     data[\u001b[39m'\u001b[39m\u001b[39mRiskLevel\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39;49m\u001b[39mRiskLevel\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mmap(title_mapping)\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
      ]
     }
    ],
    "source": [
     "# Maps risk values to intergers, MUST BE FIXED\n",
     "\n",
-    "risk_mapping = {\"high risk\": 1, \"mid risk\": 2, \"low risk\": 3}\n",
-    "for ds in dataset:\n",
-    "    ds['RiskLevel'] = ds['RiskLevel'].map(risk_mapping)"
+    "risk_mapping = {'high risk': 0, 'mid risk': 1, 'low risk': 2}\n",
+    "for data in dataset:\n",
+    "    data['RiskLevel'] = data['RiskLevel'].map(title_mapping)"
    ]
   },
   {
