--- a/MaternalHelathNotebook.ipynb
+++ b/MaternalHelathNotebook.ipynb
@@ -816,6 +816,13 @@
    "source": [
     "history = nn.fit(X_train, y_train,  batch_size= 32, epochs = 150 , validation_data = (X_test, y_test))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Personal Note: I have not been back to work on this notebook for a couple of weeks. That is because my baby daughter was born on 28/10/2023. Life has been busy but amazing!"
+   ]
   }
  ],
  "metadata": {
