OneHotEncoding for risk levels

--- a/MaternalHelathNotebook.ipynb
+++ b/MaternalHelathNotebook.ipynb
@@ -649,14 +649,12 @@
     }
    ],
    "source": [
-    "# Maps risk values to intergers\n",
+    "# One Hot Encoding for risk levels\n",
     "\n",
-    "risk_mapping = {\"high risk\": 0, \"mid risk\": 1, \"low risk\": 2}\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "dataset.RiskLevel = [risk_mapping[item] for item in dataset.RiskLevel]\n",
-    "\n",
-    "dataset.head\n",
-    "print(dataset.dtypes)"
+    "enc = OneHotEncoder(handle_unknown='ignore')\n",
+    "enc_data = pd.DataFrame(enc.fit_transform(dataset[[]]))"
    ]
   },
   {
