Fine tuning parameters, added to end 'Summary segment'

--- a/MaternalHelathNotebook.ipynb
+++ b/MaternalHelathNotebook.ipynb
@@ -5128,7 +5128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preformed 01/12/2023\n",
+    "### Preformed 01/12/2023\n",
     "\n",
     "Establish Neural Network\n",
     "- nn = tf.keras.models.Sequential([\n",
@@ -5152,7 +5152,34 @@
     "Results:\n",
     "\n",
     "7/7 [==============================] - 0s 1ms/step - loss: 0.5715 - accuracy: 0.8227\n",
-    "[0.5715042352676392, 0.8226600885391235]"
+    "[0.5715042352676392, 0.8226600885391235]\n",
+    "\n",
+    "### Preformed 07/12/2023\n",
+    "\n",
+    "Establish Neural Network\n",
+    "\n",
+    "- nn = tf.keras.models.Sequential([\n",
+    "-     tf.keras.layers.Input(shape=6,),\n",
+    "-     tf.keras.layers.Dense(units=2128, activation=\"relu\"),\n",
+    "-     tf.keras.layers.Dropout(rate= 0.6),\n",
+    "-     tf.keras.layers.Dense(units=128, activation=\"relu\"),\n",
+    "-     tf.keras.layers.Dropout(rate= 0.6),\n",
+    "-     tf.keras.layers.Dense(units=3, activation=\"softmax\"),\n",
+    "- ])\n",
+    "\n",
+    "nn.summary()\n",
+    "\n",
+    "Compiles model\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "nn.compile(optimizer = optimizer, loss= 'categorical_crossentropy', metrics= ['accuracy'])\n",
+    "\n",
+    "Fits model\n",
+    "history = nn.fit(X_train, y_train,  batch_size= 32, epochs = 2000, validation_data = (X_test, y_test))\n",
+    "\n",
+    "7/7 [==============================] - 0s 0s/step - loss: 0.5867 - accuracy: 0.7488\n",
+    "[0.5867229700088501, 0.7487684488296509]\n",
+    "\n",
+    "Notes: This new learning rate (0.0001) improves the loss value results, Also noted some accuracy decreases when epochs is lowered"
    ]
   }
  ],
